# dnsproxy-rs

./: .gitignore  Cargo.toml  config.yaml  flake.nix
src/: config.rs  handler.rs  main.rs  trace.rs
src/cache/: mod.rs
