[package]
name = "dnsproxy-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns-client = "*"
trust-dns-server = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"

clap = "3.0.0-beta.2"
config = "0.11"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

tracing = "0.1.26"
tracing-subscriber = "0.2"
tracing-opentelemetry = "0.14.0"
tracing-futures = "0.2"
opentelemetry = "0.15.0"
opentelemetry-jaeger = "0.14"